--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://192.168.2.110:3306/bq_n60?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=intest@yw
-#logging.level.com.example.web_demo.mybatis.*=debug
+#logging.level.com.example.web_demo.entity.*=debug
 mybatis.mapper-locations=classpath:/mapper/*.xml
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
