--- a/MybatisTest/src/main/resources/application.properties
+++ b/MybatisTest/src/main/resources/application.properties
@@ -11,5 +11,7 @@ spring.datasource.url=jdbc:mysql://192.168.2.110:3306/bq_n60?useUnicode=true&cha
 spring.datasource.username=root
 spring.datasource.password=intest@yw
 #logging.level.com.example.web_demo.mybatis.*=debug
+database.type=oracle
+mybatis.configuration.database-id=${database.type}
 mybatis.mapper-locations=classpath:/mapper/*.xml
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
