--- a/MybatisTest/src/main/resources/application.properties
+++ b/MybatisTest/src/main/resources/application.properties
@@ -6,12 +6,16 @@ spring.devtools.restart.additional-paths:src/main/java
 #src/main/resources文件夹内容修改不重启
 spring.devtools.restart.exclude:src/main/resources/**
 #mybatis
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.2.110:3306/bq_n60?useUnicode=true&characterEncoding=utf8
-spring.datasource.username=root
-spring.datasource.password=intest@yw
+#mysql依赖在6.0.2版本之前的驱动是com.mysql.jdbc.Driver
+#在6.0.2版本之后则变为com.mysql.cj.jdbc.Driver
+db1.spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+db1.spring.datasource.jdbc-url=jdbc:mysql://192.168.2.110:3306/bq_n60?useUnicode=true&characterEncoding=utf8
+db1.spring.datasource.username=root
+db1.spring.datasource.password=intest@yw
+db2.spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+db2.spring.datasource.jdbc-url=jdbc:oracle:thin:@192.168.1.23:1521:ney
+db2.spring.datasource.username=platform
+db2.spring.datasource.password=intest
 #logging.level.com.example.web_demo.mybatis.*=debug
-database.type=oracle
-mybatis.configuration.database-id=${database.type}
 mybatis.mapper-locations=classpath:/mapper/*.xml
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
