--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -18,10 +18,10 @@ spring.rabbitmq.listener.simple.acknowledge-mode=manual
 #netty
 netty.port=2222
 #redis
-spring.redis.host=192.168.2.110
-spring.redis.port=6379
-spring.redis.password=
-spring.redis.database=10
+#spring.redis.host=192.168.2.110
+#spring.redis.port=6379
+#spring.redis.password=
+#spring.redis.database=10
 #mongodb
 spring.data.mongodb.uri=mongodb://192.168.2.110:20000/nek
 #mybatis
@@ -32,7 +32,6 @@ spring.datasource.password=intest@yw
 #logging.level.com.example.web_demo.entity.*=debug
 mybatis.mapper-locations=classpath:/mapper/*.xml
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-
 #¡¨Ω”≥ÿ≈‰÷√
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.initialSize=5
