--- a/MybatisTest/src/main/resources/application.properties
+++ b/MybatisTest/src/main/resources/application.properties
@@ -16,6 +16,21 @@ db2.spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 db2.spring.datasource.jdbc-url=jdbc:oracle:thin:@192.168.1.23:1521:ney
 db2.spring.datasource.username=platform
 db2.spring.datasource.password=intest
+#Hikari是性能最好的连接池
+#池中维护的最小空闲连接数
+spring.datasource.hikari.minimum-idle=1
+#池中最大连接数，包括闲置和使用中的连接
+spring.datasource.hikari.maximum-pool-size=5
+#自动提交从池中返回的连接
+spring.datasource.hikari.auto-commit=true
+#连接允许在池中闲置的最长时间
+spring.datasource.hikari.idle-timeout=600000
+#连接池的用户定义名称，主要出现在日志记录和JMX管理控制台中以识别池和池配置
+spring.datasource.hikari.pool-name=Hikari-DBCP
+#池中连接最长生命周期
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.connection-test-query=select 1 from dual
 #logging.level.com.example.web_demo.mybatis.*=debug
 mybatis.mapper-locations=classpath:/mapper/*.xml
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
