--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-#management.server.port=1111
-#management.endpoints.web.exposure.include=*
-#management.endpoint.health.show-details=always
 server.port=1234
 #¿ªÆôÈÈ²¿Êð
 spring.devtools.restart.enabled=true
@@ -17,6 +14,9 @@ spring.rabbitmq.password=rabbitmq
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
 #netty
 netty.port=2222
+#quartz
+spring.quartz.job-store-type=memory
+spring.quartz.scheduler-name=quartz-zam
 #redis
 #spring.redis.host=192.168.2.110
 #spring.redis.port=6379
