--- a/DubboTest/dubbo-consumer/src/main/resources/application.properties
+++ b/DubboTest/dubbo-consumer/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.dubbo.application.name=dubbo-consumer
 #直连方式 @Reference必须带url
 #spring.dubbo.registry=N/A
 #zookeeper方式
-spring.dubbo.registry=zookeeper://127.0.0.1:2181
+spring.dubbo.registry.protocol=zookeeper
+spring.dubbo.registry.address=zookeeper://139.159.185.20:2181
