--- a/DubboTest/dubbo-provider/src/main/resources/application.properties
+++ b/DubboTest/dubbo-provider/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 server.port=9001
-spring.dubbo.application.id=dubbo-provider
 spring.dubbo.application.name=dubbo-provider
-spring.dubbo.server=true
+#spring.dubbo.server=true
+#默认协议名称和端口，多节点部署时要修改端口配置
+spring.dubbo.protocol.name=dubbo
+spring.dubbo.protocol.port=20880
 #直连方式
 #spring.dubbo.registry=N/A
-#spring.dubbo.protocol.name=dubbo
-#spring.dubbo.protocol.port=20882
 #zookeeper方式
-spring.dubbo.registry=zookeeper://127.0.0.1:2181
+spring.dubbo.registry.protocol=zookeeper
+spring.dubbo.registry.address=zookeeper://139.159.185.20:2181
