--- a/SpringCloudTest/consumer/src/main/resources/application.properties
+++ b/SpringCloudTest/consumer/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 #spring.profiles.active=node2
 server.port=8200
 spring.application.name=consumer-zam
-eureka.instance.hostname=127.0.0.1
+eureka.instance.instance-id=${spring.application.name}:${server.port}
+eureka.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 feign.hystrix.enabled=true
