--- a/SpringCloudTest/producer/src/main/resources/application-node1.properties
+++ b/SpringCloudTest/producer/src/main/resources/application-node1.properties
@@ -1,5 +1,7 @@
-#spring.profiles.active=node2
 server.port=8101
 spring.application.name=producer-zam
-eureka.instance.hostname=127.0.0.1
+eureka.instance.instance-id=${spring.application.name}:${server.port}
+eureka.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
