--- a/SpringCloudTest/producer/src/main/resources/application-node3.properties
+++ b/SpringCloudTest/producer/src/main/resources/application-node3.properties
@@ -1,4 +1,7 @@
 server.port=8103
 spring.application.name=producer-test
-eureka.instance.hostname=127.0.0.1
+eureka.instance.instance-id=${spring.application.name}:${server.port}
+eureka.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
