--- a/SpringCloudTest/server/src/main/resources/application.properties
+++ b/SpringCloudTest/server/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=8761
 spring.application.name=server
-eureka.instance.hostname=127.0.0.1
-eureka.client.registerWithEureka=false
-eureka.client.fetchRegistry=false
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
