--- a/SpringCloudTest/consumer/src/main/resources/application.properties
+++ b/SpringCloudTest/consumer/src/main/resources/application.properties
@@ -5,5 +5,5 @@ eureka.instance.instance-id=${spring.application.name}:${server.port}
 eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://139.159.185.20:8080/eureka/
 feign.hystrix.enabled=true
