--- a/SpringCloudTest/server/src/main/resources/application.properties
+++ b/SpringCloudTest/server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=8761
+server.port=8080
 spring.application.name=server
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8080/eureka/
