--- a/web_demo/src/main/docker/docker3/Dockerfile
+++ b/web_demo/src/main/docker/docker3/Dockerfile
@@ -1,5 +1,7 @@
 FROM primetoninc/jdk:1.8
 MAINTAINER zhangam
 ADD DGS.N60-1.1.0.jar dgs.jar
+ENV TZ=Asia/Shanghai
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 ENTRYPOINT ["java","-jar","dgs.jar"]
 CMD ["-url","http://113.57.170.58:63044/","-key","dgs","-path","DGS-N60","-local"]
