--- a/SpringCloudTest/producer/src/main/resources/application-node1.properties
+++ b/SpringCloudTest/producer/src/main/resources/application-node1.properties
@@ -1,7 +1,13 @@
 server.port=8101
+#服务名称，服务之间使用名称进行通讯
 spring.application.name=producer-zam
-eureka.instance.instance-id=${spring.application.name}:${server.port}
+#使用ip地址注册到注册中心
 eureka.instance.prefer-ip-address=true
+#注册中心列表中显示的状态参数
+eureka.instance.instance-id=${spring.application.name}:${server.port}
+#是否将自己注册到注册中心
 eureka.client.register-with-eureka=true
+#是否需求搜索服务信息
 eureka.client.fetch-registry=true
+#eureka注册中心地址
 eureka.client.serviceUrl.defaultZone=http://139.159.185.20:8080/eureka/
