--- a/SpringCloudTest/server/src/main/resources/application.properties
+++ b/SpringCloudTest/server/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8080
 spring.application.name=server
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+#是否将自己注册到注册中心（注册中心集群需设置true）
+eureka.client.register-with-eureka=false
+#是否需求搜索服务信息，因为自己是注册中心所以不需要
+eureka.client.fetch-registry=false
+#eureka注册中心地址
 eureka.client.serviceUrl.defaultZone=http://localhost:8080/eureka/
