--- a/SpringCloudTest/consumer/src/main/resources/application-zam.properties
+++ b/SpringCloudTest/consumer/src/main/resources/application-zam.properties
@@ -1,14 +1,15 @@
-#spring.profiles.active=node1
-server.port=8101
+server.port=8201
 #服务名称，服务之间使用名称进行通讯
-spring.application.name=producer-zam
+spring.application.name=consumer-zam
 #使用ip地址注册到注册中心
 eureka.instance.prefer-ip-address=true
 #注册中心列表中显示的状态参数
 eureka.instance.instance-id=${spring.application.name}:${server.port}
-#是否将自己注册到注册中心
+#是否将自己注册到注册中心（注册中心集群需设置true）
 eureka.client.register-with-eureka=true
-#是否需求搜索服务信息
+#是否需求搜索服务信息，因为自己是注册中心所以不需要
 eureka.client.fetch-registry=true
 #eureka注册中心地址
 eureka.client.serviceUrl.defaultZone=http://139.159.185.20:8080/eureka/
+#开启Feign Hystrix
+feign.hystrix.enabled=true
