--- a/SpringCloudTest/pom.xml
+++ b/SpringCloudTest/pom.xml
@@ -10,6 +10,7 @@
         <module>server</module>
         <module>producer</module>
         <module>consumer</module>
+        <module>zuul</module>
     </modules>
     <packaging>pom</packaging>
 
