--- a/SpringCloudTest/zuul/src/main/resources/application.properties
+++ b/SpringCloudTest/zuul/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8300
 spring.application.name=zuul
 #时间配置
+#zuul.prefix=abc
+#zuul.strip-prefix=true
 zuul.host.connect-timeout-millis=60000
 zuul.host.socket-timeout-millis=60000
 zuul.routes.baidu.path=/it/**
@@ -12,9 +14,11 @@ zuul.routes.first.path=/test
 zuul.routes.first.url=http://127.0.0.1:8200
 
 #zuul配置二(需要注册到注册中心)
-zuul.routes.second.path=/hello
+zuul.routes.second.path=/zam/**
 #转发单个服务，包含所有节点
 zuul.routes.second.service-id=producer-zam
+#会将前缀去除掉
+zuul.routes.second.strip-prefix=true
 
 #zuul配置三(需要注册到注册中心)
 zuul.routes.third.path=/test
