--- a/MybatisTest/src/main/resources/application.properties
+++ b/MybatisTest/src/main/resources/application.properties
@@ -17,18 +17,19 @@ db2.spring.datasource.jdbc-url=jdbc:oracle:thin:@192.168.1.23:1521:ney
 db2.spring.datasource.username=platform
 db2.spring.datasource.password=intest
 #Hikari是性能最好的连接池
-#池中维护的最小空闲连接数
-spring.datasource.hikari.minimum-idle=1
-#池中最大连接数，包括闲置和使用中的连接
-spring.datasource.hikari.maximum-pool-size=5
-#自动提交从池中返回的连接
-spring.datasource.hikari.auto-commit=true
-#连接允许在池中闲置的最长时间
+#连接池名字
+spring.datasource.hikari.pool-name=MyHikariCP
+#最小空闲连接数
+spring.datasource.hikari.minimum-idle=20
+#空闲连接存活最大时间，默认10分钟
 spring.datasource.hikari.idle-timeout=600000
-#连接池的用户定义名称，主要出现在日志记录和JMX管理控制台中以识别池和池配置
-spring.datasource.hikari.pool-name=Hikari-DBCP
-#池中连接最长生命周期
+#最大连接数，默认是10
+spring.datasource.hikari.maximum-pool-size=20
+#从连接池返回的连接的默认自动提交行为,默认值true
+spring.datasource.hikari.auto-commit=true
+#连接池中连接的最长生命周期，值0表示无限生命周期，默认1800000即30分钟
 spring.datasource.hikari.max-lifetime=1800000
+#数据库连接超时时间，默认30秒
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.connection-test-query=select 1 from dual
 #logging.level.com.example.web_demo.mybatis.*=debug
