--- a/SpringCloudTest/zuul/src/main/resources/application.properties
+++ b/SpringCloudTest/zuul/src/main/resources/application.properties
@@ -1,26 +1,30 @@
 server.port=8300
 spring.application.name=zuul
 #时间配置
-#zuul.prefix=abc
-#zuul.strip-prefix=true
 zuul.host.connect-timeout-millis=60000
 zuul.host.socket-timeout-millis=60000
-zuul.routes.baidu.path=/it/**
-zuul.routes.baidu.url=http://www.ityouknow.com/
 
-#zuul配置一
-zuul.routes.first.path=/test
-#转发单个服务单个节点
-zuul.routes.first.url=http://127.0.0.1:8200
+#简单路由(可以省略path,默认使用routeId作为path)
+zuul.routes.first.path=/baidu/**
+#http://www.baidu.com其实就是一个ip:port
+#请求http://127.0.0.1:8300/baidu/s?wd=zam会转到http://www.baidu.com/s?wd=zam
+zuul.routes.first.url=http://www.baidu.com
 
-#zuul配置二(需要注册到注册中心)
-zuul.routes.second.path=/zam/**
+#跳转路由
+zuul.routes.second.path=/forward/**
+zuul.routes.second.url=forward:/hello/zam
+
+#Ribbon路由(需要注册到注册中心,可以省略service-id,默认使用routeId作为service-id)
+zuul.routes.third.path=/cloud/**
 #转发单个服务，包含所有节点
-zuul.routes.second.service-id=producer-zam
+zuul.routes.third.service-id=producer-zam
 #会将前缀去除掉
-zuul.routes.second.strip-prefix=true
+zuul.routes.third.strip-prefix=true
 
-#zuul配置三(需要注册到注册中心)
-zuul.routes.third.path=/test
-zuul.routes.third.service-id=consumer-zam
+#补充: 忽略路由
+zuul.ignored-patterns=/ignored/test
+zuul.routes.fourth.path=/ignored/**
+zuul.routes.fourth.url=https://fanyi.baidu.com/
+
+#注册到注册中心
 eureka.client.serviceUrl.defaultZone=http://139.159.185.20:8080/eureka/
