--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -1,10 +1,19 @@
 server.port=1234
-#开启热部署
-spring.devtools.restart.enabled=true
-#设置重启的目录
-spring.devtools.restart.additional-paths:src/main/java
-#src/main/resources文件夹内容修改不重启
-spring.devtools.restart.exclude:src/main/resources/**
+#tomcat配置
+server.tomcat.max-threads=100
+server.tomcat.max-connections=2000
+server.tomcat.accept-count=100
+server.tomcat.basedir=.
+server.tomcat.accesslog.directory=log
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.prefix=access-log
+server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
+server.tomcat.accesslog.suffix=.log
+#记录请求原始ip，nginx反向代理记得配置以下信息
+#proxy_set_header Host $host;
+#proxy_set_header X-Real-IP $remote_addr;
+#proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+server.tomcat.accesslog.pattern=%t %{X-Forwarded-For}i %a %S [%H %r %s] '%I'
 #rabbitmq
 spring.rabbitmq.host=192.168.2.110
 spring.rabbitmq.port=5672
@@ -32,41 +41,21 @@ spring.datasource.password=intest@yw
 #logging.level.com.example.web_demo.entity.*=debug
 mybatis.mapper-locations=classpath:/mapper/*.xml
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-#连接池配置
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.initialSize=5
-spring.datasource.minIdle=5
-spring.datasource.maxActive=20
-spring.datasource.druid.validation-query=SELECT 1 FROM DUAL
-spring.datasource.testWhileIdle=true
-spring.datasource.testOnBorrow=false
-spring.datasource.testOnReturn=false
-#打开PSCache并且指定每个连接上PSCache的大小
-spring.datasource.poolPreparedStatements=true
-spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
-#配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-spring.datasource.filters=stat
-#通过connectProperties属性来打开mergeSql功能；慢SQL记录
-spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-#合并多个DruidDataSource的监控数据
-spring.datasource.useGlobalDataSourceStat=true
-
-#WebStatFilter配置
-spring.datasource.druid.web-stat-filter.enabled=true
-spring.datasource.druid.web-stat-filter.url-pattern=/*
-spring.datasource.druid.web-stat-filter.exclusions=
-spring.datasource.druid.web-stat-filter.session-stat-enable=
-spring.datasource.druid.web-stat-filter.session-stat-max-count=
-spring.datasource.druid.web-stat-filter.principal-session-name=
-spring.datasource.druid.web-stat-filter.principal-cookie-name=
-spring.datasource.druid.web-stat-filter.profile-enable=
-
-#StatViewServlet配置
-spring.datasource.druid.stat-view-servlet.enabled=true
-spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
-spring.datasource.druid.stat-view-servlet.reset-enable=false
-spring.datasource.druid.stat-view-servlet.login-username=admin
-spring.datasource.druid.stat-view-servlet.login-password=123456
-spring.datasource.druid.stat-view-servlet.allow=
-spring.datasource.druid.stat-view-servlet.deny=
+#连接池名字
+spring.datasource.hikari.pool-name=MyHikariCP
+#最小空闲连接数
+spring.datasource.hikari.minimum-idle=5
+#空闲连接存活最大时间，默认10分钟
+spring.datasource.hikari.idle-timeout=600000
+#最大连接数，默认是10
+spring.datasource.hikari.maximum-pool-size=10
+#从连接池返回的连接的默认自动提交行为，默认值true
+spring.datasource.hikari.auto-commit=true
+#连接池中连接的最长生命周期，默认30分钟，0表示无限生命周期
+spring.datasource.hikari.max-lifetime=1800000
+#数据库连接超时时间，默认30秒
+spring.datasource.hikari.connection-timeout=60000
+#security
+#spring.security.user.name=admin
+#spring.security.user.password=admin
 
