--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -15,8 +15,9 @@ server.tomcat.accesslog.suffix=.log
 #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 server.tomcat.accesslog.pattern=%t %{X-Forwarded-For}i %a %S [%H %r %s] '%I'
 #rabbitmq
-spring.rabbitmq.host=192.168.2.110
-spring.rabbitmq.port=5672
+spring.rabbitmq.addresses=192.168.2.111:5672,192.168.2.112:5672
+#spring.rabbitmq.host=192.168.2.110
+#spring.rabbitmq.port=5672
 spring.rabbitmq.virtual-host=/
 spring.rabbitmq.username=rabbitmq
 spring.rabbitmq.password=rabbitmq
