--- a/SpringCloudTest/zuul/src/main/resources/application.properties
+++ b/SpringCloudTest/zuul/src/main/resources/application.properties
@@ -14,7 +14,7 @@ zuul.routes.first.url=http://www.baidu.com
 zuul.routes.second.path=/forward/**
 zuul.routes.second.url=forward:/hello/zam
 
-#Ribbon路由(需要注册到注册中心,可以省略service-id,默认使用routeId作为service-id)
+#ribbon路由(需要注册到注册中心,可以省略service-id,默认使用routeId作为service-id)
 zuul.routes.third.path=/cloud/**
 #转发单个服务，包含所有节点
 zuul.routes.third.service-id=producer-zam
@@ -25,6 +25,18 @@ zuul.routes.third.strip-prefix=true
 zuul.ignored-patterns=/ignored/test
 zuul.routes.fourth.path=/ignored/**
 zuul.routes.fourth.url=https://fanyi.baidu.com/
+
+#对全局开启限流，策略是3秒内访问不允许超过5次，并且这5次请求要小于10秒
+zuul.ratelimit.key-prefix=true
+#表示代理之后
+zuul.ratelimit.behind-proxy=true
+#单位时间窗口
+zuul.ratelimit.default-policy.refresh-interval=30
+#在一个单位时间窗口的请求数量
+zuul.ratelimit.default-policy.limit=5
+#在一个单位时间窗口的请求时间限制
+zuul.ratelimit.default-policy.quota=10
+zuul.ratelimit.default-policy.type=url
 
 #注册到注册中心
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8080/eureka/
