--- a/SpringCloudTest/zuul/pom.xml
+++ b/SpringCloudTest/zuul/pom.xml
@@ -29,6 +29,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.marcosbarbero.cloud</groupId>
+            <artifactId>spring-cloud-zuul-ratelimit</artifactId>
+            <version>2.0.6.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
