--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -15,47 +15,47 @@ server.tomcat.accesslog.suffix=.log
 #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 server.tomcat.accesslog.pattern=%t %{X-Forwarded-For}i %a %S [%H %r %s] '%I'
 #rabbitmq
-spring.rabbitmq.addresses=192.168.2.111:5672,192.168.2.112:5672
+#spring.rabbitmq.addresses=192.168.2.111:5672,192.168.2.112:5672
 #spring.rabbitmq.host=192.168.2.110
 #spring.rabbitmq.port=5672
-spring.rabbitmq.virtual-host=/
-spring.rabbitmq.username=rabbitmq
-spring.rabbitmq.password=rabbitmq
-spring.rabbitmq.listener.simple.acknowledge-mode=manual
+#spring.rabbitmq.virtual-host=/
+#spring.rabbitmq.username=rabbitmq
+#spring.rabbitmq.password=rabbitmq
+#spring.rabbitmq.listener.simple.acknowledge-mode=manual
 #netty
-netty.port=2222
+#netty.port=2222
 #quartz
-spring.quartz.job-store-type=memory
-spring.quartz.scheduler-name=quartz-zam
+#spring.quartz.job-store-type=memory
+#spring.quartz.scheduler-name=quartz-zam
 #redis
 #spring.redis.host=192.168.2.110
 #spring.redis.port=6379
 #spring.redis.password=
 #spring.redis.database=10
 #mongodb
-spring.data.mongodb.uri=mongodb://192.168.2.110:20000/nek
+#spring.data.mongodb.uri=mongodb://192.168.2.110:20000/nek
 #mybatis
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.2.110:3306/bq_n60?useUnicode=true&characterEncoding=utf8
-spring.datasource.username=root
-spring.datasource.password=intest@yw
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://192.168.2.110:3306/bq_n60?useUnicode=true&characterEncoding=utf8
+#spring.datasource.username=root
+#spring.datasource.password=intest@yw
 #logging.level.com.example.web_demo.entity.*=debug
-mybatis.mapper-locations=classpath:/mapper/*.xml
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis.mapper-locations=classpath:/mapper/*.xml
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #连接池名字
-spring.datasource.hikari.pool-name=MyHikariCP
+#spring.datasource.hikari.pool-name=MyHikariCP
 #最小空闲连接数
-spring.datasource.hikari.minimum-idle=5
+#spring.datasource.hikari.minimum-idle=5
 #空闲连接存活最大时间，默认10分钟
-spring.datasource.hikari.idle-timeout=600000
+#spring.datasource.hikari.idle-timeout=600000
 #最大连接数，默认是10
-spring.datasource.hikari.maximum-pool-size=10
+#spring.datasource.hikari.maximum-pool-size=10
 #从连接池返回的连接的默认自动提交行为，默认值true
-spring.datasource.hikari.auto-commit=true
+#spring.datasource.hikari.auto-commit=true
 #连接池中连接的最长生命周期，默认30分钟，0表示无限生命周期
-spring.datasource.hikari.max-lifetime=1800000
+#spring.datasource.hikari.max-lifetime=1800000
 #数据库连接超时时间，默认30秒
-spring.datasource.hikari.connection-timeout=60000
+#spring.datasource.hikari.connection-timeout=60000
 #security
 #spring.security.user.name=admin
 #spring.security.user.password=admin
