--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -16,12 +16,16 @@ server.tomcat.accesslog.suffix=.log
 server.tomcat.accesslog.pattern=%t %{X-Forwarded-For}i %a %S [%H %r %s] '%I'
 #rabbitmq
 #spring.rabbitmq.addresses=192.168.2.111:5672,192.168.2.112:5672
-#spring.rabbitmq.host=192.168.2.110
+#spring.rabbitmq.host=10.27.100.230
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.virtual-host=/
-#spring.rabbitmq.username=rabbitmq
-#spring.rabbitmq.password=rabbitmq
+#spring.rabbitmq.username=admin
+#spring.rabbitmq.password=admin
 #spring.rabbitmq.listener.simple.acknowledge-mode=manual
+#开启confirm模式
+#spring.rabbitmq.publisher-confirms=true
+#开启return模式
+#spring.rabbitmq.publisher-returns=true
 #netty
 #netty.port=2222
 #quartz
@@ -59,4 +63,15 @@ server.tomcat.accesslog.pattern=%t %{X-Forwarded-For}i %a %S [%H %r %s] '%I'
 #security
 #spring.security.user.name=admin
 #spring.security.user.password=admin
+#mqtt配置
+spring.mqtt.username=admin
+spring.mqtt.password=password
+#服务器连接地址，如果有多个，用逗号隔开，如：tcp://127.0.0.1:61613,tcp://192.168.2.133:61613
+spring.mqtt.url=tcp://10.27.100.230:1883
+#客户端ID
+spring.mqtt.client.id=mqttId
+#推送主题
+spring.mqtt.topic=topic,hello,hello1,hello2
+#连接超时
+spring.mqtt.timeout=3000
 
