--- a/web_demo/src/main/resources/fdfs_client.conf
+++ b/web_demo/src/main/resources/fdfs_client.conf
@@ -1,7 +1,15 @@
-connect_timeout = 60
-network_timeout = 60
+connect_timeout = 2
+network_timeout = 30
 charset = UTF-8
-http.tracker_http_port = 8999
+http.tracker_http_port = 1234
 http.anti_steal_token = no
-http.secret_key = 123456
-tracker_server = 10.27.100.230:22122
+http.secret_key = FastDFS1234567890
+
+tracker_server = 139.159.185.20:22122
+#tracker_server = 10.0.11.248:22122
+#tracker_server = 10.0.11.249:22122
+
+connection_pool.enabled = true
+connection_pool.max_count_per_entry = 500
+connection_pool.max_idle_time = 3600
+connection_pool.max_wait_time_in_ms = 1000
