--- a/StudyTest/pom.xml
+++ b/StudyTest/pom.xml
@@ -137,6 +137,11 @@
             <artifactId>zkclient</artifactId>
             <version>0.1</version>
         </dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>4.5.2</version>
+        </dependency>
     </dependencies>
 
 </project>
