--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -14,6 +14,11 @@ server.tomcat.accesslog.suffix=.log
 #proxy_set_header X-Real-IP $remote_addr;
 #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 server.tomcat.accesslog.pattern=%t %{X-Forwarded-For}i %a %S [%H %r %s] '%I'
+#视图配置
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
+#静态文件
+spring.mvc.static-path-pattern=/static/**
 #rabbitmq
 #spring.rabbitmq.addresses=192.168.2.111:5672,192.168.2.112:5672
 #spring.rabbitmq.host=10.27.100.230
@@ -64,14 +69,14 @@ server.tomcat.accesslog.pattern=%t %{X-Forwarded-For}i %a %S [%H %r %s] '%I'
 #spring.security.user.name=admin
 #spring.security.user.password=admin
 #mqtt配置
-spring.mqtt.username=admin
-spring.mqtt.password=password
+#spring.mqtt.username=admin
+#spring.mqtt.password=password
 #服务器连接地址，如果有多个，用逗号隔开，如：tcp://127.0.0.1:61613,tcp://192.168.2.133:61613
-spring.mqtt.url=tcp://10.27.100.230:1883
+#spring.mqtt.url=tcp://10.27.100.230:1883
 #客户端ID
-spring.mqtt.client.id=mqttId
+#spring.mqtt.client.id=mqttId
 #推送主题
-spring.mqtt.topic=topic,hello,hello1,hello2
+#spring.mqtt.topic=topic,hello,hello1,hello2
 #连接超时
-spring.mqtt.timeout=3000
+#spring.mqtt.timeout=3000
 
