--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -15,10 +15,10 @@ server.tomcat.accesslog.suffix=.log
 #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 server.tomcat.accesslog.pattern=%t %{X-Forwarded-For}i %a %S [%H %r %s] '%I'
 #视图配置
-spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 #静态文件
-spring.mvc.static-path-pattern=/static/**
+spring.mvc.static-path-pattern=/**
 #rabbitmq
 #spring.rabbitmq.addresses=192.168.2.111:5672,192.168.2.112:5672
 #spring.rabbitmq.host=10.27.100.230
@@ -26,10 +26,11 @@ spring.mvc.static-path-pattern=/static/**
 #spring.rabbitmq.virtual-host=/
 #spring.rabbitmq.username=admin
 #spring.rabbitmq.password=admin
+#手动确认消息（默认是自动确认）
 #spring.rabbitmq.listener.simple.acknowledge-mode=manual
-#开启confirm模式
+#确认消息已发送到交换机
 #spring.rabbitmq.publisher-confirms=true
-#开启return模式
+#确认消息已发送到队列
 #spring.rabbitmq.publisher-returns=true
 #netty
 #netty.port=2222
