提交 没问题了

--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -15,7 +15,7 @@ server.tomcat.accesslog.suffix=.log
 #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 server.tomcat.accesslog.pattern=%t %{X-Forwarded-For}i %a %S [%H %r %s] '%I'
 # ”Õº≈‰÷√
-spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.prefix=/view/
 spring.mvc.view.suffix=.jsp
 #æ≤Ã¨Œƒº˛
 spring.mvc.static-path-pattern=/**
