--- a/DubboTest/pom.xml
+++ b/DubboTest/pom.xml
@@ -19,6 +19,8 @@
         <project.build.target>1.8</project.build.target>
         <project.build.source>1.8</project.build.source>
         <project.build.java.version>1.8</project.build.java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <spring-boot.version>2.1.8.RELEASE</spring-boot.version>
         <dubbo-spring-boot.version>2.0.0</dubbo-spring-boot.version>
     </properties>
