--- a/SpringCloudTest/producer/src/main/resources/application-node2.properties
+++ b/SpringCloudTest/producer/src/main/resources/application-node2.properties
@@ -1,5 +1,5 @@
 server.port=8102
-spring.application.name=producer-zam
+spring.application.name=zam-producer
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 eureka.client.register-with-eureka=true
