--- a/SpringCloudTest/producer/src/main/resources/application.properties
+++ b/SpringCloudTest/producer/src/main/resources/application.properties
@@ -1,15 +1,13 @@
-server.port=8200
+server.port=8100
 #服务名称，服务之间使用名称进行通讯
-spring.application.name=zam-consumer
+spring.application.name=zam-producer
 #使用ip地址注册到注册中心
 eureka.instance.prefer-ip-address=true
 #注册中心列表中显示的状态参数
 #eureka.instance.instance-id=${spring.application.name}:${server.port}
-#是否将自己注册到注册中心（注册中心集群需设置true）
+#是否将自己注册到注册中心
 eureka.client.register-with-eureka=true
-#是否需求搜索服务信息，因为自己是注册中心所以不需要
+#是否需求搜索服务信息
 eureka.client.fetch-registry=true
 #eureka注册中心地址
 eureka.client.serviceUrl.defaultZone=http://10.42.0.61:8080/eureka/
-#开启Feign Hystrix
-feign.hystrix.enabled=true
