--- a/SpringCloudTest/consumer/src/main/resources/application-zam.properties
+++ b/SpringCloudTest/consumer/src/main/resources/application-zam.properties
@@ -1,6 +1,6 @@
 server.port=8201
 #服务名称，服务之间使用名称进行通讯
-spring.application.name=consumer-zam
+spring.application.name=zam-consumer
 #使用ip地址注册到注册中心
 eureka.instance.prefer-ip-address=true
 #注册中心列表中显示的状态参数
