--- a/SpringCloudTest/producer/src/main/resources/application-node1.properties
+++ b/SpringCloudTest/producer/src/main/resources/application-node1.properties
@@ -1,7 +1,7 @@
 #spring.profiles.active=node1
 server.port=8101
 #服务名称，服务之间使用名称进行通讯
-spring.application.name=producer-zam
+spring.application.name=zam-producer
 #使用ip地址注册到注册中心
 eureka.instance.prefer-ip-address=true
 #注册中心列表中显示的状态参数
