--- a/SpringCloudTest/producer/src/main/resources/application-node3.properties
+++ b/SpringCloudTest/producer/src/main/resources/application-node3.properties
@@ -1,5 +1,5 @@
 server.port=8103
-spring.application.name=producer-test
+spring.application.name=test-producer
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 eureka.client.register-with-eureka=true
