--- a/webflux/pom.xml
+++ b/webflux/pom.xml
@@ -19,19 +19,21 @@
     </properties>
 
     <dependencies>
+        <!-- 反应式web框架 webflux -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
+        <!-- spring-boot-starter-data-r2dbc -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-r2dbc</artifactId>
             <version>2.3.0.RELEASE</version>
         </dependency>
+        <!-- r2dbc mysql库 -->
         <dependency>
             <groupId>dev.miku</groupId>
             <artifactId>r2dbc-mysql</artifactId>
-            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
