--- a/webflux/src/main/resources/application.properties
+++ b/webflux/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=1111
 spring.r2dbc.url=r2dbcs:mysql://10.27.100.235:3307/notioni_test
 spring.r2dbc.username=root
 spring.r2dbc.password=root
