文件上传下载、json序列化

--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -9,6 +9,9 @@ server.tomcat.accesslog.enabled=true
 server.tomcat.accesslog.prefix=access-log
 server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
 server.tomcat.accesslog.suffix=.log
+#文件上传大小设置
+spring.servlet.multipart.max-file-size=300MB
+spring.servlet.multipart.max-request-size=500MB
 #记录请求原始ip，nginx反向代理记得配置以下信息
 #proxy_set_header Host $host;
 #proxy_set_header X-Real-IP $remote_addr;
