百度地图api学习、极光推送学习

--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -80,4 +80,8 @@ spring.mvc.static-path-pattern=/**
 #spring.mqtt.topic=topic,hello,hello1,hello2
 #连接超时
 #spring.mqtt.timeout=3000
-
+#极光推送
+jpush.appKey=06bd642f7a1387af9cd04dc7
+jpush.masterSecret=9ec09ea588ab10d9b53bb894
+jpush.liveTime=1000
+jpush.apnsProduction=false
