--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 server.port=1234
 #tomcat配置
-server.tomcat.max-threads=100
-server.tomcat.max-connections=2000
-server.tomcat.accept-count=100
+server.tomcat.max-threads=10
+server.tomcat.max-connections=100
+server.tomcat.accept-count=1000
+server.tomcat.min-spare-threads=2
 server.tomcat.basedir=.
 server.tomcat.accesslog.directory=log
 server.tomcat.accesslog.enabled=true
 server.tomcat.accesslog.prefix=access-log
 server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
 server.tomcat.accesslog.suffix=.log
+server.tomcat.accesslog.pattern=%t %{X-Forwarded-For}i %a %S [%H %r %s] '%I'
 #文件上传大小设置
 spring.servlet.multipart.max-file-size=300MB
 spring.servlet.multipart.max-request-size=500MB
@@ -16,7 +18,6 @@ spring.servlet.multipart.max-request-size=500MB
 #proxy_set_header Host $host;
 #proxy_set_header X-Real-IP $remote_addr;
 #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-server.tomcat.accesslog.pattern=%t %{X-Forwarded-For}i %a %S [%H %r %s] '%I'
 #视图配置
 spring.mvc.view.prefix=/view/
 spring.mvc.view.suffix=.jsp
