--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -62,12 +62,19 @@ spring.redis.lettuce.pool.time-between-eviction-runs=10000
 #spring.datasource.hikari.max-lifetime=1800000
 #spring.datasource.hikari.connection-timeout=60000
 #mqtt
-spring.mqtt.username=admin
-spring.mqtt.password=password
-spring.mqtt.url=tcp://127.0.0.1:61613
-spring.mqtt.client.id=mqttId
+#spring.mqtt.username=admin
+#spring.mqtt.password=password
+#spring.mqtt.url=tcp://127.0.0.1:61613
+#spring.mqtt.client.id=mqttId
 #jpush
-jpush.appKey=06bd642f7a1387af9cd04dc7
-jpush.masterSecret=9ec09ea588ab10d9b53bb894
-jpush.liveTime=1000
-jpush.apnsProduction=false
+#jpush.appKey=06bd642f7a1387af9cd04dc7
+#jpush.masterSecret=9ec09ea588ab10d9b53bb894
+#jpush.liveTime=1000
+#jpush.apnsProduction=false
+#influxDB
+spring.influx.url=http://agg9z6.natappfree.cc
+spring.influx.userName=root
+spring.influx.password=root
+spring.influx.database=influx_demo
+spring.influx.retention_policy=default 
+spring.influx.retention_policy_time=30d 
