--- a/web_demo/pom.xml
+++ b/web_demo/pom.xml
@@ -206,6 +206,17 @@
             <artifactId>jiguang-common</artifactId>
             <version>1.1.4</version>
         </dependency>
+        <!-- influxdb -->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.17.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.influxdb</groupId>
+            <artifactId>influxdb-java</artifactId>
+            <version>2.15</version>
+        </dependency>
     </dependencies>
 
     <build>
