--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.application.name=springboot_web_demo
+management.endpoints.web.exposure.include=*
+management.metrics.tags.application=${spring.application.name}
 server.port=1234
 server.tomcat.max-threads=10
 server.tomcat.max-connections=100
@@ -72,9 +75,9 @@ spring.redis.lettuce.pool.time-between-eviction-runs=10000
 #jpush.liveTime=1000
 #jpush.apnsProduction=false
 #influxDB
-spring.influx.url=http://agg9z6.natappfree.cc
-spring.influx.userName=root
-spring.influx.password=root
-spring.influx.database=influx_demo
-spring.influx.retention_policy=default 
-spring.influx.retention_policy_time=30d 
+#spring.influx.url=http://agg9z6.natappfree.cc
+#spring.influx.userName=root
+#spring.influx.password=root
+#spring.influx.database=influx_demo
+#spring.influx.retention_policy=default
+#spring.influx.retention_policy_time=30d
