--- a/web_demo/pom.xml
+++ b/web_demo/pom.xml
@@ -217,6 +217,12 @@
             <artifactId>influxdb-java</artifactId>
             <version>2.15</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>1.1.3</version>
+        </dependency>
     </dependencies>
 
     <build>
