--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -81,3 +81,8 @@ spring.mvc.static-path-pattern=/**
 #spring.influx.database=influx_demo
 #spring.influx.retention_policy=default
 #spring.influx.retention_policy_time=30d
+xxl.job.admin.addresses=http://172.26.30.142:32044
+xxl.job.executor.appname=zam-test
+xxl.job.executor.port=8081
+xxl.job.executor.logpath=C:\Users\ZAM\Desktop
+xxl.job.executor.logretentiondays=-1
