--- a/web_demo/pom.xml
+++ b/web_demo/pom.xml
@@ -217,11 +217,15 @@
             <artifactId>influxdb-java</artifactId>
             <version>2.15</version>
         </dependency>
-
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
             <version>1.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.2.0</version>
         </dependency>
     </dependencies>
 
