--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -50,13 +50,13 @@ spring.mvc.static-path-pattern=/**
 #mongodb
 #spring.data.mongodb.uri=mongodb://192.168.2.110:20000/nek
 #mybatis
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://192.168.2.110:3306/bq_n60?useUnicode=true&characterEncoding=utf8
-#spring.datasource.username=root
-#spring.datasource.password=intest@yw
-#logging.level.com.example.web_demo.entity.*=debug
-#mybatis.mapper-locations=classpath:/mapper/*.xml
-#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://172.30.1.110:3306/river_chief_user?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=1@#qazxcde32wsX
+logging.level.com.example.web_demo.entity.*=debug
+mybatis.mapper-locations=classpath:/mapper/*.xml
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #spring.datasource.hikari.pool-name=MyHikariCP
 #spring.datasource.hikari.minimum-idle=5
 #spring.datasource.hikari.idle-timeout=600000
