--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -51,7 +51,7 @@ spring.mvc.static-path-pattern=/**
 #spring.data.mongodb.uri=mongodb://192.168.2.110:20000/nek
 #mybatis
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://172.30.1.110:3306/river_chief_user?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://172.30.1.110:3306/guangdong_screen?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=1@#qazxcde32wsX
 logging.level.com.example.web_demo.entity.*=debug
